--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project1.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -107,7 +107,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project2.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -128,7 +128,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project3.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -149,7 +149,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project4.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -170,7 +170,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project5.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -191,7 +191,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project6.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -214,7 +214,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project7.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -235,7 +235,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project8.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
@@ -256,7 +256,7 @@
                 <div class="project-wrap">
                   <img
                     src="./images/projects/project9.jpg"
-                    alt="project"
+                    alt="our cool project"
                     width="370"
                     height="294"
                   />
