Updated .html & .scss

--- a/index.html
+++ b/index.html
@@ -219,14 +219,35 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__member">
-              <img
-                srcset="
-                  ./images/team/desk-member1.jpg    270w,
-                  ./images/team/desk-member1@2x.jpg 540w
-                "
-                src="./images/team/desk-member1.jpg"
-                alt="very important team member"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/mob-member1.jpg    450w,
+                    ./images/team/mob-member1@2x.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/tab-member1.jpg    354w,
+                    ./images/team/tab-member1@2x.jpg 708w
+                  "
+                  media="(max-width: 1199px)"
+                  sizes="(min-width: 768px) 354px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/desk-member1.jpg    270w,
+                    ./images/team/desk-member1@2x.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="(min-width: 1200px) 270px, 100vw"
+                  type="image/jpeg" />
+                <img
+                  src="./images/team/mob-member1.jpg"
+                  alt="very important team member"
+              /></picture>
               <div class="caption">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p lang="en" class="team__position">Product Designer</p>
@@ -273,14 +294,35 @@
               </div>
             </li>
             <li class="team__member">
-              <img
-                srcset="
-                  ./images/team/desk-member2.jpg    270w,
-                  ./images/team/desk-member2@2x.jpg 540w
-                "
-                src="./images/team/desk-member2.jpg"
-                alt="very important team member"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/mob-member2.jpg    450w,
+                    ./images/team/mob-member2@2x.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/tab-member2.jpg    354w,
+                    ./images/team/tab-member2@2x.jpg 708w
+                  "
+                  media="(max-width: 1199px)"
+                  sizes="(min-width: 768px) 354px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/desk-member2.jpg    270w,
+                    ./images/team/desk-member2@2x.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="(min-width: 1200px) 270px, 100vw"
+                  type="image/jpeg" />
+                <img
+                  src="./images/team/mob-member2.jpg"
+                  alt="very important team member"
+              /></picture>
               <div class="caption">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p lang="en" class="team__position">Frontend Developer</p>
@@ -327,14 +369,35 @@
               </div>
             </li>
             <li class="team__member">
-              <img
-                srcset="
-                  ./images/team/desk-member3.jpg    270w,
-                  ./images/team/desk-member3@2x.jpg 540w
-                "
-                src="./images/team/desk-member3.jpg"
-                alt="very important team member"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/mob-member3.jpg    450w,
+                    ./images/team/mob-member3@2x.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/tab-member3.jpg    354w,
+                    ./images/team/tab-member3@2x.jpg 708w
+                  "
+                  media="(max-width: 1199px)"
+                  sizes="(min-width: 768px) 354px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/desk-member3.jpg    270w,
+                    ./images/team/desk-member3@2x.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="(min-width: 1200px) 270px, 100vw"
+                  type="image/jpeg" />
+                <img
+                  src="./images/team/mob-member3.jpg"
+                  alt="very important team member"
+              /></picture>
               <div class="caption">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p lang="en" class="team__position">Marketing</p>
@@ -381,14 +444,35 @@
               </div>
             </li>
             <li class="team__member">
-              <img
-                srcset="
-                  ./images/team/desk-member4.jpg    270w,
-                  ./images/team/desk-member4@2x.jpg 540w
-                "
-                src="./images/team/desk-member4.jpg"
-                alt="very important team member"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/mob-member4.jpg    450w,
+                    ./images/team/mob-member4@2x.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/tab-member4.jpg    354w,
+                    ./images/team/tab-member4@2x.jpg 708w
+                  "
+                  media="(max-width: 1199px)"
+                  sizes="(min-width: 768px) 354px, 100vw"
+                  type="image/jpeg" />
+                <source
+                  srcset="
+                    ./images/team/desk-member4.jpg    270w,
+                    ./images/team/desk-member4@2x.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="(min-width: 1200px) 270px, 100vw"
+                  type="image/jpeg" />
+                <img
+                  src="./images/team/mob-member4.jpg"
+                  alt="very important team member"
+              /></picture>
               <div class="caption">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p lang="en" class="team__position">UI Designer</p>
