--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+   <header class="header">
       <div class="container">
         <a href="./index.html" class="logo header__logo"
           >Web<span class="logo__accent">Studio</span></a
@@ -147,14 +147,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project1.jpg    370w,
-                      ./images/projects/desk-project1@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project1.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project1.jpg 450w,
+                    ./images/projects/mob-project1@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project1.jpg 354w,
+                    ./images/projects/tab-project1@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project1.jpg 370w,
+                    ./images/projects/desk-project1@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project1.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -174,14 +175,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project2.jpg    370w,
-                      ./images/projects/desk-project2@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project2.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project2.jpg 450w,
+                    ./images/projects/mob-project2@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project2.jpg 354w,
+                    ./images/projects/tab-project2@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project2.jpg 370w,
+                    ./images/projects/desk-project2@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project2.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -197,14 +199,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project3.jpg    370w,
-                      ./images/projects/desk-project3@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project3.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project3.jpg 450w,
+                    ./images/projects/mob-project3@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project3.jpg 354w,
+                    ./images/projects/tab-project3@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project3.jpg 370w,
+                    ./images/projects/desk-project3@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project3.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -220,14 +223,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project4.jpg    370w,
-                      ./images/projects/desk-project4@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project4.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project4.jpg 450w,
+                    ./images/projects/mob-project4@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project4.jpg 354w,
+                    ./images/projects/tab-project4@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project4.jpg 370w,
+                    ./images/projects/desk-project4@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project4.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -243,14 +247,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project5.jpg    370w,
-                      ./images/projects/desk-project5@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project5.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project5.jpg 450w,
+                    ./images/projects/mob-project5@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project5.jpg 354w,
+                    ./images/projects/tab-project5@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project5.jpg 370w,
+                    ./images/projects/desk-project5@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project5.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -266,14 +271,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project6.jpg    370w,
-                      ./images/projects/desk-project6@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project6.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project6.jpg 450w,
+                    ./images/projects/mob-project6@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project6.jpg 354w,
+                    ./images/projects/tab-project6@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project6.jpg 370w,
+                    ./images/projects/desk-project6@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project6.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -291,14 +297,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project7.jpg    370w,
-                      ./images/projects/desk-project7@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project7.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project7.jpg 450w,
+                    ./images/projects/mob-project7@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project7.jpg 354w,
+                    ./images/projects/tab-project7@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project7.jpg 370w,
+                    ./images/projects/desk-project7@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project7.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -314,14 +321,15 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project8.jpg    370w,
-                      ./images/projects/desk-project8@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project8.jpg"
-                    alt="our cool project"
-                  />
+                  <picture>
+                    <source srcset="./images/projects/mob-project8.jpg 450w,
+                    ./images/projects/mob-project8@2x.jpg 900w" media="(max-width: 767px)" sizes="(min-width: 480px) 450px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project8.jpg 354w,
+                    ./images/projects/tab-project8@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project8.jpg 370w,
+                    ./images/projects/desk-project8@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project8.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
@@ -337,14 +345,19 @@
                 rel="noopener nofollow noreferrer"
               >
                 <div class="project-wrap">
-                  <img
-                    srcset="
-                      ./images/projects/desk-project9.jpg    370w,
-                      ./images/projects/desk-project9@2x.jpg 740w
-                    "
-                    src="./images/projects/desk-project9.jpg"
-                    alt="our cool project"
-                  />
+                    <picture>
+                    <source
+                    srcset="./images/projects/mob-project9.jpg 450w,
+                    ./images/projects/mob-project9@2x.jpg 900w"
+                    media="(max-width: 767px)"
+                    sizes="(min-width: 480px) 450px, 100vw"
+                    type="image/jpeg" />
+                    <source srcset="./images/projects/tab-project9.jpg 354w,
+                    ./images/projects/tab-project9@2x.jpg 708w" media="(max-width: 1199px)" sizes="(min-width: 768px) 354px, 100vw" type="image/jpeg" />
+                    <source srcset="./images/projects/desk-project9.jpg 370w,
+                    ./images/projects/desk-project9@2x.jpg 740w" media="(min-width: 1200px)" sizes="(min-width: 1200px) 370px, 100vw" type="image/jpeg" />
+                    <img src="./images/projects/mob-project9.jpg"
+                    alt="our cool project" /></picture>
                   <p class="project-desc">Product description lies here</p>
                 </div>
                 <div class="project-caption">
