--- a/index.html
+++ b/index.html
@@ -735,13 +735,15 @@
               required
             />
             <label class="agree-text" for="agree">
-              <span
-                ><svg class="check-icon" width="15" height="13">
+              <span class="check-block"
+                ><svg class="check-icon" width="15" height="14">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договора</a>
+              <span
+                >Соглашаюсь с рассылкой и принимаю
+                <a class="agreement" href="">Условия договора</a></span
+              >
             </label>
           </div>
           <button class="modal-send-btn">Отправить</button>
